Fix jumping of hero title on error page.

--- a/assets/stylesheets/scss/components/_components.hero.scss
+++ b/assets/stylesheets/scss/components/_components.hero.scss
@@ -57,8 +57,7 @@
 // 	@extend %text-small;
 // }
 
-.hero__button,
-.hero__buttons > a {
+.hero__buttons {
 	pointer-events: auto;
 
 	.hero__subtitle + & {
